--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -93,11 +93,11 @@ a:hover{
     backdrop-filter: blur(10px);
     position: absolute;
     top: 0;
-    height: 91%;
+    height: 100%;
     display: flex;
     align-items: center;
     justify-content: center;
-    display: none;
+    /* display: none; */
 }
 
 .preloader{
